--- a/web/css/site.css
+++ b/web/css/site.css
@@ -4,13 +4,26 @@ body {
 }
 
 .navbar-inverse {
-background-color: #336EFF;
-border-color: #FFFFFF;
+    background-color: #1f1f67;
+    color: #fff;
+}
+
+.navbar-inverse a {
+    color: #fff !important;
+}
+
+.navbar-nav > li > a {
+    background-color: #1f1f67;
+}
+
+.navbar-nav > .active > a {
+    background-color: #3c3c86 !important;
 }
 
 .wrap {
     min-height: 100%;
     height: auto;
+    background: #fffdf0;
     margin: 0 auto -60px;
     padding: 0 0 60px;
 }
@@ -20,7 +33,7 @@ border-color: #FFFFFF;
 }
 
 .footer {
-    height: 60px;
+    height: 50px;
     background-color: #f5f5f5;
     border-top: 1px solid #ddd;
     padding-top: 20px;
